FTKernelAPI_SDK/FTKernel_API/FTKernelAPI.h

//////////////////////////////////////////////////////////////////////////

//定义64位无符号长整型
//Define 64bit long integer type
typedef unsigned __int64 QWORD;
//定义配置文件对象的句柄
//Define Config INI file handle
typedef LONG *HConfigIni;
//用户标识的长度
//length of client identifier
#define IDSIZE 20
//BitTorrent 客户端版本信息长度
//bitorrent client version information
#define AGENTSIZE 64
//生成的SHA的散列的长度
//Length of SHA1
#define SHA1_DIGEST_LENGTH 20 
//代理的类型
//Proxytypes
#define PROXYTYPE_NOPROXY 0
#define PROXYTYPE_SOCKS4 1
#define PROXYTYPE_SOCKS4A 2
#define PROXYTYPE_SOCKS5 3
#define PROXYTYPE_HTTP11 4
////////////////////////
//下载状态
//Download status

#define DLSTATE_NONE				0
#define DLSTATE_ALLOCING			1
#define DLSTATE_CHECKING			2
#define DLSTATE_DOWNLOAD			3
#define DLSTATE_PAUSING				4
#define DLSTATE_CHECKEND			5
#define DLSTATE_FETALERR			6
#define DLSTATE_TERMINATE			7
//定义Piece的状态
//Piece status
#define PIECESTATE_INCOMPLETE	0
#define PIECESTATE_DOWNLOADING	1
#define PIECESTATE_COMPLETE	2
//Port type of Firewall and UPnP
//操做Windows防火墙或者UPnP时的端口类型定义
#define WCXT_TCP_PORT 1
#define WCXT_UDP_PORT 2
//////////////////////////////////////////////////////////////////////////

struct _tagPeerData
{
    DWORD m_dwIP;
    USHORT m_nPort;
    BYTE m_pPeerID[ IDSIZE ];
	
    //-------------------------------------
	
    BYTE m_bIsLocal;
    char m_szVersion[ AGENTSIZE ];
    QWORD m_qwPeerHaveSize;
    float m_fDownRate;
    float m_fUpRate;
    QWORD m_qwDownloaded;
    QWORD m_qwUploaded;
    float m_fTimeElapsed;
    float m_fPeerDownRate;
    char m_szExtInfo[ 256 ];
};
struct _tagMiniPeerData
{
    DWORD	m_dwIP;
    USHORT	m_nPort;
};
struct _tagAnnounceData
{
    char m_szURL[ 512 ];
    BYTE m_bWorking;
    BYTE m_bHeader;
    UINT m_nCount;
    UINT m_nFailed;
    float m_fTimeLeft;
    float m_fLastTime;
    char m_szExtInfo[ 512 ];
};
struct _tagFileInfo
{
    char m_szFileName[ 512 ];
    QWORD m_qwFileSize;
};
struct _tagErrInfo
{
    char m_szErrInfo[ 1024 ];
};
	//////////////////////////////////////////////////////////////////////////
	
	//定义被动通知的回调函数
	//Define callback function type
	typedef BOOL ( BTAPI *FTK_CALLBACK_FUNC ) ( unsigned int nSocket, const unsigned char *pData );
	
	//////////////////////////////////////////////////////////////////////////
	//Libary License Interface
	
	//Set license key
	//设置license的密钥
	FTKERNELAPI_API void BTAPI FTK_License_Set( const char * lpszLicense );
	
	//////////////////////////////////////////////////////////////////////////
	//Library version information
	
	//获取当前库的版本信息, 例如: nMajor = 1, nMinor = 1 => ver: 1.1
	//Get library major version, example: nMajor = 1, nMinor = 1 => ver: 1.1
	FTKERNELAPI_API void BTAPI FTK_Version_Info( int &nMajor, int &nMinor );
	
	//////////////////////////////////////////////////////////////////////////
	//Define yourself protocol identifier string
	
	//Define yourself protocol identifier string(to avoid Router filter)
	//定义你自己的网络协议标识，可以避开某些网络运营商的协议封锁
	FTKERNELAPI_API void BTAPI FTK_Protocol_IDS( const char *pIDS, BOOL bAllowOtherIDS = FALSE );
	
	//////////////////////////////////////////////////////////////////////////
	//Define yourself user identifier
	
	//Define yourself user identifier(read by tracker)
	//定义自己的用户标识信息(Tracker服务器可以获取到)
	FTKERNELAPI_API void BTAPI FTK_Identifier_String10( const char *pS );
	
	//////////////////////////////////////////////////////////////////////////
	//Define yourself http tracker "UserAgent"
	
	//Define yourself http tracker "UserAgent"
	//定义自己的提交给http tracker的http协议中的"UserAgent"
	FTKERNELAPI_API void BTAPI FTK_Http_UserAgent( const char * lpszUA );
	
	//////////////////////////////////////////////////////////////////////////
	//Config INI file interface
	
	//创建一个新的配置文件句柄
	//Create a new Config INI file handle
	FTKERNELAPI_API HConfigIni BTAPI FTK_Config_Open();
	
	//销毁一个存在的配置文件句柄
	//Destroy a HConfigIni hanle
	FTKERNELAPI_API void BTAPI FTK_Config_Close( HConfigIni hConfigIni );
	
	//设置字符串选项
	//Set string value item
	FTKERNELAPI_API void BTAPI FTK_Config_SetStr( HConfigIni hConfigIni, const char * lpszName, const char * lpszValue );
	
	//设置整型值选项
	//Set integer value item
	FTKERNELAPI_API void BTAPI FTK_Config_SetInt( HConfigIni hConfigIni, const char * lpszName, QWORD nValue );
	
	//设置浮点型选项
	//Set float value item
	FTKERNELAPI_API void BTAPI FTK_Config_SetFloat( HConfigIni hConfigIni, const char * lpszName, double fValue );
	
	//环境初始化
	//Initialize context
	//@lpszIniFile: kernel configuration file - INI file
	FTKERNELAPI_API BOOL BTAPI FTK_Context_Init( const char * lpszIniFile = NULL, BOOL bLog = TRUE );
	
	//环境初始化2
	//Initialize context2
	//@hConfigIni: kernel configuration file handle - INI file
	FTKERNELAPI_API BOOL BTAPI FTK_Context_Init2( HConfigIni hConfigIni, BOOL bLog = TRUE );
	
	//设置被动通知的回调函数
	//Set callback funtion pointer
	FTKERNELAPI_API void BTAPI FTK_Context_NotifyCB( FTK_CALLBACK_FUNC pfn );
	//设置被动通知的回调函数
	//Set callback funtion pointer
	FTKERNELAPI_API void BTAPI FTK_Context_NotifyCB( FTK_CALLBACK_FUNC pfn );
	
	//释放整个环境
	//Release context
	FTKERNELAPI_API void BTAPI FTK_Context_Release();
	
	//整个环境的事件驱动引擎
	//Context event driver
	FTKERNELAPI_API BOOL BTAPI FTK_Context_Run();
	
	//强迫退出环境, 停止运行
	//在停止时要退出正在运行的线程所以可能要稍微等待
	//Stop context event driver
	FTKERNELAPI_API void BTAPI FTK_Context_Stop();
	
	//重新根据配置文件绑定端口
	//Rebind listen port
	FTKERNELAPI_API void BTAPI FTK_Context_ReBindListenPort();
	
	//判断是否已经初始化
	//Is context initialized?
	FTKERNELAPI_API BOOL BTAPI FTK_Context_IsInit();
	
	//是否监听成功了端口
	//Is context running?
	FTKERNELAPI_API BOOL BTAPI FTK_Context_IsRunning();
	
	//判断是否已经运行
	//Return context thread ID
	FTKERNELAPI_API DWORD BTAPI FTK_Context_GetThreadID();
	
	//获取线程的ID
	//Return listening port
	FTKERNELAPI_API USHORT BTAPI FTK_Context_GetListenPort();
	
	//重新指定端口绑定操作
	//Return binding ip address
	FTKERNELAPI_API const char *BTAPI FTK_Context_GetBindIP();
	
	//判断是否绑定端口操作成功
	//return bind listen port status
	FTKERNELAPI_API BOOL BTAPI FTK_Context_IsBindListenPort();