FTKernelAPI_SDK/CSharpDemo/FTKernelAPI.cs

//////////////////////////////////////////////////////////////////////////
// FTKernelAPI.h : header file
//
// English Notes:
//
// Copyright @ 2004-2006 p2plib.com All rights reserved.
// MSN: FlashBT@Hotmail.com
// Homepage: http://www.p2plib.com
//
// FTKernelAPI is a kernel API based on Bittorrent protocol. 
//
// Please use and enjoy. Please let me know of any bugs/mods/improvements 
// that you have found and I will fix them into this library. 
//
// Please visit http://www.p2plib.com for the detailed information.
//
// ***********************************************************************
// Chinese Notes:
//
// 版权所有 2004-2006 北京惠软畅联网络技术有限公司 保留所有权利. 中国. 
// 官方网站: http://www.p2plib.com/
//
// FTKernelAPI 是基于BitTorrent协议的内核库, 并做了强大扩展. 可以帮助您
// 快速的开发自己的P2P软件系统.
//
// FTKernelAPI 兼容BT协议内核库, 分为4个版本:
// 1. 免费版本, 使用受限制, 只支持一个并发任务, 无技术支持
// 2. 初级版本, 需付费, 支持多个任务并发, 有技术支持
// 3. 中级版本, 需付费, 支持自定义协议, 数据加密, 封锁指定IP, 限速等功能, 有技术支持
// 4. 高级版本, 需付费, 支持顺序下载, 流媒体点播, 被动回调加载任务, 有技术支持
//
// 如果发现任何错误/建议, 请通知我们, 我们将在以后的版本中很快改进和实现.
// 更详细信息请访问我的网站: http://www.p2plib.com
//////////////////////////////////////////////////////////////////////////
///
using System;
using System.Runtime.InteropServices;

namespace P2PAPI
{
	/// <summary>
	/// Summary description for FTKernelAPI.
	/// </summary>
	public class FTKernelAPI
	{
		public FTKernelAPI()
		{
			//
			// TODO: Add constructor logic here
			//			
		}

		/////////////////////////////////////////////////////////////////////////////////////
		///

		
		//用户标识的长度
		//length of client identifier
		public enum IDSZ
		{
			IDSIZE = 20
		}

		//BitTorrent 客户端版本信息长度
		//bitorrent client version information
		public enum AGENTSZ
		{
			AGENTSIZE = 64
		}

		//生成的SHA的散列的长度
		//Length of SHA1
		public enum SAH1_DL
		{
			SHA1_DIGEST_LENGTH = 20
		}
		
		//代理的类型
		//Proxytypes
		public enum PROXYTYPE
		{
			PROXYTYPE_NOPROXY = 0,
			PROXYTYPE_SOCKS4 = 1,
			PROXYTYPE_SOCKS4A = 2,
			PROXYTYPE_SOCKS5 = 3,
			PROXYTYPE_HTTP11 = 4
		}

		////////////////////////
		//下载状态
		//Download status
		public enum DLSTATE 
		{ 
			DLSTATE_NONE = 0, 
			DLSTATE_ALLOCING, 
			DLSTATE_CHECKING,
			DLSTATE_DOWNLOAD,
			DLSTATE_PAUSING,
			DLSTATE_CHECKEND,
			DLSTATE_FETALERR,
			DLSTATE_TERMINATE
		}

		//定义Piece的状态
		//Piece status
		public enum PIECESTATE
		{
			PIECESTATE_INCOMPLETE =	0,
			PIECESTATE_DOWNLOADING = 1,
			PIECESTATE_COMPLETE	= 2
		}

		//Port type of Firewall and UPnP
		//操做Windows防火墙或者UPnP时的端口类型定义
		public enum WCXT
		{
			WCXT_TCP_PORT = 1,
			WCXT_UDP_PORT = 2
		}

		/////////////////////////////////////////////////////////////////////////////////////

		//定义被动通知的回调函数
		//Define callback function type
		public delegate bool FTK_CALLBACK_FUNC( uint nSocket, IntPtr pData );

		/////////////////////////////////////////////////////////////////////////////////////
		

		[StructLayout(LayoutKind.Sequential,Pack = 8, CharSet=CharSet.Ansi)] 
		public struct _tagPeerData 
		{ 
			public uint m_dwIP;
			public ushort m_nPort;
			[MarshalAs(UnmanagedType.ByValArray, SizeConst=(int)IDSZ.IDSIZE)]
			public byte [] m_pPeerID;
	
			//-------------------------------------
	
			public byte m_bIsLocal;
			[MarshalAs(UnmanagedType.ByValTStr, SizeConst=(int)AGENTSZ.AGENTSIZE)] 
			public string m_szVersion;
			public ulong m_ulPeerHaveSize;
			public float m_fDownRate;
			public float m_fUpRate;
			public ulong m_ulDownloaded;
			public ulong m_ulUploaded;
			public float m_fTimeElapsed;
			public float m_fPeerDownRate;
			[MarshalAs(UnmanagedType.ByValTStr, SizeConst=256)] 
			public string m_szExtInfo;
		}

		[StructLayout(LayoutKind.Sequential,Pack = 8)] 
		public struct _tagMiniPeerData
		{
			public uint	m_dwIP;
			public ushort m_nPort;
		};

		[StructLayout(LayoutKind.Sequential,Pack = 8, CharSet=CharSet.Ansi)] 
		public struct _tagAnnounceData
		{
			[MarshalAs(UnmanagedType.ByValTStr, SizeConst=512)] 
			public string m_szURL;
			public byte m_bWorking;
			public byte m_bHeader;
			public uint m_nCount;
			public uint m_nFailed;
			public float m_fTimeLeft;
			public float m_fLastTime;
			[MarshalAs(UnmanagedType.ByValTStr, SizeConst=512)] 
			public string m_szExtInfo;
		};
		
		[StructLayout(LayoutKind.Sequential,Pack = 8, CharSet=CharSet.Ansi)] 
		public struct _tagFileInfo
		{
			[MarshalAs(UnmanagedType.ByValTStr, SizeConst=512)] 
			public string m_szFileName;
			public ulong m_ulFileSize;
		};

		[StructLayout(LayoutKind.Sequential,Pack = 8, CharSet=CharSet.Ansi)] 
		public struct _tagErrInfo
		{
			[MarshalAs(UnmanagedType.ByValTStr, SizeConst=1024)]
			string m_szErrInfo;
		};

		//////////////////////////////////////////////////////////////////////////
		//Libary License Interface
	
		//Set license key
		//设置license的密钥
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_License_Set", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern void FTK_License_Set( string sLicense );

		//////////////////////////////////////////////////////////////////////////
		//Library version information
	
		//获取当前库的版本信息, 例如: nMajor = 1, nMinor = 1 => ver: 1.1
		//Get library major version, example: nMajor = 1, nMinor = 1 => ver: 1.1
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Version_Info", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern void FTK_Version_Info( ref int nMajor, ref int nMinor );
	
		//////////////////////////////////////////////////////////////////////////
		//Define yourself protocol identifier string
	
		//Define yourself protocol identifier string(to avoid Router filter)
		//定义你自己的网络协议标识，可以避开某些网络运营商的协议封锁
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Protocol_IDS", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern void FTK_Protocol_IDS( string sIDS, bool bAllowOtherIDS );
	
		//////////////////////////////////////////////////////////////////////////
		//Define yourself user identifier
	
		//Define yourself user identifier(read by tracker)
		//定义自己的用户标识信息(Tracker服务器可以获取到)
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Identifier_String10", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
		public static extern void FTK_Identifier_String10( string sS );

		//////////////////////////////////////////////////////////////////////////
		//Define yourself http tracker "UserAgent"
	
		//Define yourself http tracker "UserAgent"
		//定义自己的提交给http tracker的http协议中的"UserAgent"
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Http_UserAgent", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
		public static extern void FTK_Http_UserAgent( string sUA );

		//////////////////////////////////////////////////////////////////////////
		//Config INI file interface
	
		//创建一个新的配置文件句柄
		//Create a new Config INI file handle
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Config_Open", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
		public static extern uint FTK_Config_Open();
	
		//销毁一个存在的配置文件句柄
		//Destroy a HConfigIni hanle
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Config_Close", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
		public static extern void FTK_Config_Close( uint hConfigIni );
	
		//设置字符串选项
		//Set string value item
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Config_SetStr", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
		public static extern void FTK_Config_SetStr( uint hConfigIni, string sName, string sValue );
	
		//设置整型值选项
		//Set integer value item
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Config_SetInt", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
		public static extern void FTK_Config_SetInt( uint hConfigIni, string sName, ulong nValue );
	
		//设置浮点型选项
		//Set float value item
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Config_SetFloat", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
		public static extern void FTK_Config_SetFloat( uint hConfigIni, string sName, double fValue );

		/////////////////////////////////////////////////////////////////////////////////////
		///

		//环境初始化
		//Initialize context
		//@sIniFile: kernel configuration file - INI file
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Context_Init", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
  　　　　public static extern bool FTK_Context_Init( string sIniFile, bool bLogbLog );

		//环境初始化2
		//Initialize context2
		//@hConfigIni: kernel configuration file handle - INI file
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Context_Init2", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern bool FTK_Context_Init2( uint hConfigIni, bool bLog );
	
		//设置被动通知的回调函数
		//Set callback funtion pointer
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Context_NotifyCB", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern void FTK_Context_NotifyCB( FTK_CALLBACK_FUNC pfn );

		//释放整个环境
		//Release context
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Context_Release", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
  　　　　public static extern void FTK_Context_Release();

		//整个环境的事件驱动引擎
		//Context event driver
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Context_Run", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
  　　　　public static extern bool FTK_Context_Run();

		//强迫退出环境, 停止运行
		//在停止时要退出正在运行的线程所以可能要稍微等待
		//Stop context event driver
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Context_Stop", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
  　　　　public static extern void FTK_Context_Stop();

		//重新根据配置文件绑定端口
		//Rebind listen port
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Context_ReBindListenPort", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
		public static extern void FTK_Context_ReBindListenPort();

		//判断是否已经初始化
		//Is context initialized?
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Context_IsInit", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
  　　　　public static extern bool FTK_Context_IsInit();

		//是否监听成功了端口
		//Is context running?
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Context_IsRunning", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
  　　　　public static extern bool FTK_FTK_Context_IsRunning();

		//判断是否已经运行
		//Return context thread ID
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Context_GetThreadID", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
  　　　　public static extern bool FTK_Context_GetThreadID();

		//获取线程的ID
		//Return listening port
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Context_GetListenPort", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
  　　　　public static extern ushort FTK_Context_GetListenPort();

		//重新指定端口绑定操作
		//Return binding ip address
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Context_GetBindIP", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
  　　　　public static extern string FTK_Context_GetBindIP();

		//判断是否绑定端口操作成功
		//return bind listen port status
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Context_IsBindListenPort", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern bool FTK_Context_IsBindListenPort();
